--- a/my-projrect/src/main/webapp/WEB-INF/web.xml
+++ b/my-projrect/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:spring-renren.xml
+			classpath:config/spring-manage.xml
 		</param-value>
 	</context-param>
 	
