--- a/my-projrect/src/main/resources/db.properties
+++ b/my-projrect/src/main/resources/db.properties
@@ -4,7 +4,7 @@
 
 jdbc.url=jdbc:mysql://127.0.0.1:3306/test?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=p@swrd123
+jdbc.password=root
 
 jdbc.initialSize=5
 jdbc.maxActive=30
